force-app/main/default/objects/Accessories_to_SFA_Field_Mappings__mdt/Accessories_to_SFA_Field_Mappings__mdt.object-meta.xml
<CustomObject>
    <label>Accessories to SFA Field Mappings</label>
    <pluralLabel>Accessories to SFA Field Mappings</pluralLabel>
</CustomObject>