force-app/main/default/objects/Accessories_to_SFA_Field_Mappings__mdt/fields/Accessories_Field__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Field__c</fullName>
    <label>Accessories Field</label>
    <metadataRelationshipControllingField>Accessories_to_SFA_Field_Mappings__mdt.Accessories_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Accessories_to_SFA_Field_Mappings1</relationshipLabel>
    <relationshipName>Accessories_to_SFA_Field_Mappings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>