force-app/main/default/objects/Accessories_to_SFA_Field_Mappings__mdt/fields/Accessories_Object__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Object__c</fullName>
    <label>Accessories Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Accessories_to_SFA_Field_Mappings1</relationshipLabel>
    <relationshipName>Accessories_to_SFA_Field_Mappings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>