force-app/main/default/objects/Accessories_to_SFA_Field_Mappings__mdt/fields/SFA_Field__c.field-meta.xml
<CustomField>
    <fullName>SFA_Field__c</fullName>
    <label>SFA Field</label>
    <metadataRelationshipControllingField>Accessories_to_SFA_Field_Mappings__mdt.SFA_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Accessories_to_SFA_Field_Mappings</relationshipLabel>
    <relationshipName>Accessories_to_SFA_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>