force-app/main/default/objects/Accessories_to_SFA_Field_Mappings__mdt/fields/SFA_Object__c.field-meta.xml
<CustomField>
    <fullName>SFA_Object__c</fullName>
    <label>SFA Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Accessories_to_SFA_Field_Mappings</relationshipLabel>
    <relationshipName>Accessories_to_SFA_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>